--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta name="description" content="create webapp ساخت وبسایت اپلیکیشن وب اپلیکیشن مشاوره وپشتیبانی سایت وردپرس وسایت با کد نویسی اختصاصی  محمد زارعی مقدم ">
     <meta name="keywords" content="محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/samecode.css" rel="stylesheet">
+    <link href="/styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/b8c948b754.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <header>
+        <h1>hi</h1>
     <!-- <nav>
     </nav> -->
     </header>
