--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
   <head>
     <title>mzm website</title>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="30" />
     <meta name="author" content="Mohammad Zarie moghadam" />
     <meta
@@ -28,8 +28,8 @@
   <body>
     <header>
       <nav>
-        <h1 class="englishDirection">hi</h1>
-        <p class="englishDirection">
+        <h1 class="font-english">hi</h1>
+        <p class="font-english">
           if you wana see how i create this dynamic web site see my friend link
           source
         </p>
@@ -74,18 +74,10 @@
         </svg>
       </div>
       <!--Waves end-->
-      <p>hiii</p>
-      <p>3اکه جرات داری بزن رو این لینک</p>
-      <!--Content ends-->
     </header>
     <!--Header ends-->
-    <p>1111اکه جرات داری بزن رو این لینک</p>
-    <nav>
-      <p>lllllاکه جرات داری بزن رو این لینک</p>
-    </nav>
     <section>
       <div>
-        <p>other section</p>
       </div>
       <!--if not related to main issue in our website
              <article></article> -->
