--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html lang="fa" dir="rtl">
   <head>
     <title>mzm website</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="30" />
-    <meta name="author" content="Mohammad Zarie moghadam" />
-    <meta
-      name="description"
-      content="create webapp ساخت وبسایت اپلیکیشن وب اپلیکیشن مشاوره وپشتیبانی سایت وردپرس وسایت با کد نویسی اختصاصی  محمد زارعی مقدم "
-    />
-    <meta
+    <!-- <meta
       name="keywords"
       content="محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    /> -->
+    <meta http-equiv="refresh" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- bootstrap compiled  css & js -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="/styles/style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
@@ -28,12 +24,14 @@
   <body>
     <header>
       <nav>
-        <h1 class="font-english">hi</h1>
-        <p class="font-english">
-          if you wana see how i create this dynamic web site see my friend link
-          source
-        </p>
+        <h1>سلام به وب سایت شخصی من یعنی mzm خوش اومدین </h1>
       </nav>
+      <!-- top navbar with dynamic bottoms -->
+      <div class="topNav">
+        <button class="btn-1">ام زد. سایت من</button>
+        
+       
+      </div>
       <!--Waves Container-->
       <div>
         <svg
@@ -72,13 +70,13 @@
             <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
           </g>
         </svg>
+        <!-- top navbar -->
       </div>
       <!--Waves end-->
     </header>
     <!--Header ends-->
     <section>
-      <div>
-      </div>
+      <div></div>
       <!--if not related to main issue in our website
              <article></article> -->
       <!-- <aside></aside> -->
