--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <body>
     <header>
       <nav>
-        <h1>سلام به وب سایتmmmmmmmmmmmmm شخصیjjjj  من یعنی mzm خوش اومدین </h1>
+        <h1>سلام به وبjggggg سایتmmmmmmmmmmmmm شخصیjjjj  من یعنی mzm خوش اومدین </h1>
       </nav>
       <!-- top navbar with dynamic bottoms -->
       <div class="topNav">
-        <button class="btn-1">امmm زد سایت jjمن</button>
+        <button class="btn-1">امmmmmmm زد سایت jjمن</button>
         
        
       </div>
