--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <body>
     <header>
       <nav>
-        <h1>سلام  وب kjkسایت شخصیkk  من یعنی mzm خوش اومدین </h1>
+        <h1>سلام  وب سایت شخصی  من یعنی  خوش اومدین </h1>
       </nav>
       <!-- top navbar with dynamic bottoms -->
       <div class="topNav">
-        <button class="btn-1">ام زد سایت من</button>
+        <button class="btn-1">ام زد سنتتایت من</button>
         
        
       </div>
