good job every day noting

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
       <!-- top navbar with dynamic bottoms -->
       <div class="topNav">
-        <button class="btn-1">ام زد سنتتایت من</button>
+        <button class="btn-1">ام زد سایت من</button>
         
        
       </div>
