--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <nav>
-        <h1>سلام  وب سایت شخصی  من یعنی  خوش اومدین </h1>
+        <h1 id="testJs1">سلام  وب سایت شخصی  من یعنی  خوش اومدین </h1>
       </nav>
       <!-- top navbar with dynamic bottoms -->
       <div class="topNav">
@@ -76,7 +76,12 @@
     </header>
     <!--Header ends-->
     <section>
-      <div></div>
+      <div>
+        <h1 id="whiteHatHacker1">hi mohammad congatulation to you</h1>
+        <h4 id="hi"></h4>
+      <!-- bottom form testing clean for runnig site   -->
+        <h3 type= "button" onclick="document.write(22 -2)">hiiiiii</h3>
+      </div>
       <!--if not related to main issue in our website
              <article></article> -->
       <!-- <aside></aside> -->
