--- a/index.html
+++ b/index.html
@@ -142,5 +142,24 @@
     </section> -->
     <footer></footer>
     <script src="js/script.js"></script>
+    <!-- graphic : ui ux xd psd ,
+cms : plugin & coding , 
+template cms & coding ,
+application 
+web app 
+web view .
+front end technologies : html css js 
+events http media , components assembly driver 
+api : dom event node objedt 3d party api
+browser api <geolocation api & google map { graphic api = canvas_webGl }
+$ media api : [htmlElementRtc ,
+webRtc], 
+app manifests pwas extension  -->
+<script>
+
+</script>
+<h3>
+  
+</h3>
   </body>
 </html>
