--- a/index.html
+++ b/index.html
@@ -128,14 +128,12 @@
     </section>
     <!DOCTYPE html>
     <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
-    </head>
-    <body>
-      
-    </body>
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+      </head>
+      <body></body>
     </html>
 
     <!-- <section>
@@ -155,11 +153,7 @@ browser api <geolocation api & google map { graphic api = canvas_webGl }
 $ media api : [htmlElementRtc ,
 webRtc], 
 app manifests pwas extension  -->
-<script>
-
-</script>
-<h3>
-  
-</h3>
+    <script></script>
+    <h3>This is a placeholder text.</h3>
   </body>
 </html>
