--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ browser api <geolocation api & google map { graphic api = canvas_webGl }
 $ media api : [htmlElementRtc ,
 webRtc], 
 app manifests pwas extension  -->
+<!-- now i wana to  -->
     <script></script>
     <h3>This is a placeholder text.</h3>
   </body>
