--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ $ media api : [htmlElementRtc ,
 webRtc], 
 app manifests pwas extension  -->
 <!-- now i wana to  -->
+ <!-- ui & ux create ,
+  in tablet & idea hope tomorow b egin works  -->
     <script></script>
     <h3>This is a placeholder text.</h3>
   </body>
