--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ app manifests pwas extension  -->
 <!-- now i wana to  -->
  <!-- ui & ux create ,
   in tablet & idea hope tomorow b egin works  -->
+<!-- this is friday i orgenise at tree plan to use & now save them in bookmark create 3 field ok & idea 5 am in iprtant  -->
     <script></script>
     <h3>This is a placeholder text.</h3>
   </body>
