--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@ app manifests pwas extension  -->
  <!-- ui & ux create ,
   in tablet & idea hope tomorow b egin works  -->
 <!-- this is friday i orgenise at tree plan to use & now save them in bookmark create 3 field ok & idea 5 am in iprtant  -->
- <!--   m,egfggyjhjghjvhm vnmcjfjvhndtxxujcfgyhjmghmfgyc
-    for all of them ?????? -->
-    <script></script>
+<!--   m,egfggyjhjghjvhm vnmcjfjvhndtxxujcfgyhjmghmfgyc
+for all of them ?????? -->
+<!-- today create gitlab acount & ...  -->
+<script></script>
     <h3>This is a placeholder text.</h3>
   </body>
 </html>
