--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE >
 <html lang="fa" dir="rtl">
+  <!-- bootstrap javascript font awesome  -->
   <head>
     <title>mzm website</title>
-    <!-- <meta
+    <meta
       name="keywords"
       content="محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن"
-    /> -->
+    />
     <meta
       http-equiv="refresh"
       charset="UTF-8"
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <!-- bootstrap compiled  css & js -->
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      hf="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="/styles/style.css" rel="stylesheet" />
     <link
@@ -162,8 +164,8 @@ app manifests pwas extension  -->
     <!-- this is friday i orgenise at tree plan to use & now save them in bookmark create 3 field ok & idea 5 am in iprtant  -->
     <!--   m,egfggyjhjghjvhm vnmcjfjvhndtxxujcfgyhjmghmfgyc
 for all of them ?????? -->
-   <!-- hi git  vs code solve que  -->
-<!-- today create gitlab acount & ...  -->
+    <!-- hi git  vs code solve que  -->
+    <!-- today create gitlab acount & ...  -->
     <script></script>
     <h3>This is a placeholder text.</h3>
   </body>
