--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
   <head>
     <title>mzm website</title>
     <meta
-      name="keywords"
+    http-equiv="refresh"
+    charset="UTF-8"
+      name="Mz My website"
       content="محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن"
     />
-    <meta
-      http-equiv="refresh"
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-
+    <!-- bootstrap ↓ -->
     <link
       hf="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,6 +25,8 @@
       src="https://kit.fontawesome.com/b8c948b754.js"
       crossorigin="anonymous"
     ></script>
+    <!-- google icon↓
+     -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
