--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <title>mzm website</title>
     <meta
-    http-equiv="refresh"
-    charset="UTF-8"
+      http-equiv="refresh"
+      charset="UTF-8"
       name="Mz My website"
       content="محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن"
     />
@@ -13,10 +13,12 @@
     <link
       hf="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />c
+    />
+    c
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="/styles/style.css" rel="stylesheet" />
+    <!-- google icon↓ -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -25,9 +27,7 @@
       src="https://kit.fontawesome.com/b8c948b754.js"
       crossorigin="anonymous"
     ></script>
-    <!-- google icon↓
-     -->
-    <link href="https://ffonts.googleapis.com/icon?family=Material+Icons" />
+    <!-- google icon↓ -->
   </head>
   <body>
     <header>
@@ -79,15 +79,13 @@
         <!-- top navbar -->
       </div>
       <!--Waves end-->
-    <!--Header ends-->
+      <!--Header ends-->
     </header>
     <section>
-        <h1 id="whiteHatHacker1">hi mohammad congatulation to you</h1>
-        <h4 id="hi"></h4>
-        <!-- bottom form testing clean for runnig site   -->
-        <h3 type="button" onclick="document.write(22 -2)">hiiiiii</h3>
-      
-      
+      <h1 id="whiteHatHacker1">hi mohammad congatulation to you</h1>
+      <h4 id="hi"></h4>
+      <!-- bottom form testing clean for runnig site   -->
+      <h3 type="button" onclick="document.write(22 -2)">hiiiiii</h3>
     </section>
 
     <!-- <section>
