--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html dir='rtl' lang='fa'>
-<head></head>
-<header></header>
-<h1>%hiiii</h1>
-<p>okkkkkkkkk</p>
-<p>hiiiii</p>
-<h2>convert haml to html auto plz</h2>
-<h2>hiii</h2>
+<head>
+<title>mzm website</title>
+<meta charset='UTF-8' content='محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن' http-equiv='refresh' name='میم زال وبسایتم'>
+<link href='/styles/style.css' rel='stylesheet'>
+<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
+</head>
+<body>
+<header>
+<nav>
+<h1 id='test-js1'>کاکو سایتم خوش اومدین  ه زال</h1>
+</nav>
+<div class='topNav'>
+<button class='btn-1'></button>
+</div>
+<div>
+<svg class='waves' preserveaspectratio='none' shape-rendering='auto' viewbox='0 24 150 28' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
+<defs>
+<path d='M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z' id='gentle-wave'></path>
+</defs>
+<g class='parallax'>
+<use fill='rgba(255,255,255,0.7' x='48' xlink:href='#gentle-wave' y='0'></use>
+<use fill='rgba(255,255,255,0.5)' x='48' xlink:href='#gentle-wave' y='3'></use>
+<use fill='rgba(255,255,255,0.3)' x='48' xlink:href='#gentle-wave' y='5'></use>
+<use fill='#fff' x='48' xlink:href='#gentle-wave' y='7'></use>
+</g>
+</svg>
+</div>
+</header>
+<section>
+<h1 id='whiteHatHacher1'>hi im mohammad congatulation to you & me  = s</h1>
+<h4 id='hi'></h4>
+</section>
+<section></section>
+<footer></footer>
+<script crossorigin='anonymous' src='https://kit.fontawesome.com/b8c948b754.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js'></script>
+<script src='js/script.js'></script>
+</body>
 </html>
-<!--  we should create haml at begin with cross road -->
